# space-thumbnails

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: release.yml
crates/alembic-sys/: Cargo.toml  bridge.cpp  build.rs
crates/alembic-sys/examples/: read.rs
crates/alembic-sys/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/filament-bindings/: Cargo.toml  VENDORED.md  bindings.cpp  build.rs
crates/filament-bindings/build_support/: download.rs  mod.rs  target.rs
crates/filament-bindings/examples/: assimp_diagnose.rs
crates/filament-bindings/examples/gltf/: main.rs
crates/filament-bindings/src/: bindings.rs  lib.rs
crates/filament-bindings/src/alembic/: mod.rs
crates/filament-bindings/src/assimp/: aiDefaultMat.filamat  aiDefaultTrans.filamat  aiTexturedMat.filamat  aiTexturedMat.mat  asset.rs  helper.rs  mod.rs
crates/filament-bindings/src/backend/: backend.rs  buffer_descriptor.rs  driver_enums.rs  mod.rs  platform.rs
crates/filament-bindings/src/filament/: camera.rs  engine.rs  fence.rs  indirect_light.rs  material_instance.rs  mod.rs  renderer.rs  texture.rs  texture_sampler.rs  view.rs
crates/filament-bindings/src/filameshio/: mesh_reader.rs
crates/filament-bindings/src/glftio/: asset.rs  asset_loader.rs  material_provider.rs  mod.rs  resource_loader.rs
crates/filament-bindings/src/ibl/: mod.rs
crates/filament-bindings/src/image/: ktx_bundle.rs
crates/filament-bindings/src/utils/: mod.rs
crates/mtlx-helper/: Cargo.toml  bridge.cpp  build.rs
crates/mtlx-helper/src/: main.rs
crates/render-helper/: Cargo.toml
crates/render-helper/examples/: client.rs
crates/render-helper/src/: main.rs  vrm_thumbnail.rs
crates/russimp-sys-static/: Cargo.toml  README.md  VENDORED.md  build.rs
crates/russimp-sys-static/.github/workflows/: release.yml
crates/russimp-sys-static/src/: bindings.rs  lib.rs
crates/windows/: Cargo.toml
crates/windows-dll/: Cargo.toml
crates/windows-dll/src/: crash.rs  dll.rs  lib.rs  logging.rs
crates/windows-installer/: Cargo.toml  app.manifest  build.rs
crates/windows-installer/src/: main.rs
crates/windows-mtlx-dll/: Cargo.toml
crates/windows-mtlx-dll/src/: lib.rs  logging.rs
crates/windows/src/: constant.rs  helper_client.rs  lib.rs  logging.rs  render_worker.rs  utils.rs
crates/windows/src/providers/: mod.rs  thumbnail.rs  thumbnail_file.rs  thumbnail_mtlx.rs
