[package]
name = "space-thumbnails-render-helper"
version.workspace = true
edition = "2021"

[[bin]]
name = "space-thumbnails-render-helper"
path = "src/main.rs"

[dependencies]
space-thumbnails = { path = "../core" }
log = "0.4"
serde_json = "1"
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
