[package]
name = "space-thumbnails-windows-dll"
version = "1.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.34", features = ["Win32_System_Diagnostics_Debug", "Win32_System_Kernel"] }
space-thumbnails-windows = { path = "../windows" }
winreg = "0.10"
eventlog = "0.1.1"
log = "0.4"
humantime = "2"


[lib]
crate-type = ["cdylib"]
