[package]
name = "space-thumbnails-mtlx-dll"
version.workspace = true
edition = "2021"

[dependencies]
windows = { version = "0.34", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_LibraryLoader",
  "Win32_System_SystemServices",
  "Win32_UI_Shell",
] }
space-thumbnails-windows = { path = "../windows" }
winreg = "0.10"

[lib]
crate-type = ["cdylib"]
