[package]
name = "space-thumbnails-windows"
version.workspace = true
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
lazy_static = "1.4"
log = "0.4"

[dependencies.windows]
version = "0.34.0"
features = [
  "alloc",
  "implement",
  "Win32_System_Com",
  "Win32_System_SystemServices",
  "Win32_System_LibraryLoader",
  "Win32_Graphics_Gdi",
  "Win32_Foundation",
  "Win32_UI_Shell",
  "Win32_UI_Shell_PropertiesSystem",
]

[build-dependencies]
image = "0.24"
